# nextpnr-viewer

./: .gitignore  .parcelrc  README.md  docker-compose.yml  index.html  package-lock.json  package.json  place-ecp5.json  place-ice40.json  place.json  shell.nix  tsconfig.json
.github/workflows/: publish.yml  website.yml
docs/: README.md  architecture.md  build.md  chipsupport.md  development.md  index.md  installation.md  usage.md  wasm-bootstrapping.md
examples/ecp5-12k/: place.json  report.json
examples/ice40-lp8k/: place.json  report.json
lib/: Cargo.toml  chipdbMinimizer.mjs  package.json  rollup.config.mjs  tsconfig.json
lib/src/: bin.rs  index.ts  lib.rs  main.rs  renderer.interface.ts  renderer.rs  renderer.ts  types.ts  utils.rs  viewer.interface.ts  viewer.rs  viewer.ts  worker.ts
lib/src/architecture/: architecture.ts  ecp5.arch.ts  ecp5.rs  ice40.rs  mod.rs  types.rs
lib/src/chipdb/: binary-types.ts  chipdb.interface.ts  ecp5-impl.chipdb.ts  encoder.rs  mod.rs  relslice.ts  reltypes.rs
lib/src/chipdb-new/: ecp5.chipdb.ts
lib/src/chipdb/ecp5/: impl.rs  mod.rs  types.rs
lib/src/chipdb/ice40/: impl.rs  mod.rs  types.rs
lib/src/decal/: decal.ts  ecp5.decalid.ts  ecp5.rs  ice40.rs  mod.rs
lib/src/gfx/: constids.rs  ecp5.constincs.ts  ecp5.gfx.constants.ts  ecp5.gfx.ts  gfx.ts  mod.rs  styles.ts  types.rs  types.ts
lib/src/gfx/ecp5/: constids.rs  consts.rs  gfx.rs  mod.rs  tilewire.rs
lib/src/gfx/ice40/: constids.rs  consts.rs  gfx.rs  mod.rs  tilewire.rs
lib/src/pnr-json/: pnr-json.ts
lib/src/pnrjson/: mod.rs  nextpnr.rs  nextpnr_types.rs  report.rs  report_types.rs  types_rs.rs  types_ts.rs
lib/src/render/: bel.decal.ts  gfx.ts
lib/src/webgl/: line.rs  line.ts  mod.rs  program.rs  program.ts  rectangle.rs  rectangle.ts  types.rs  webgl.ts
macros/minimize_derive/: Cargo.toml
macros/minimize_derive/src/: lib.rs
parcel-optimizer-array-buffer/: package.json
parcel-optimizer-array-buffer/lib/: parcel-optimizer-array-buffer.js  parcel-optimizer-array-buffer.js.map
parcel-optimizer-array-buffer/src/: parcel-optimizer-array-buffer.js
src/: index.ts  renderer.ts
src/architecture/: ecp5.arch.ts
src/chipdb/: types.ts
src/chipdb-new/: ecp5-impl.chipdb.ts  relslice.ts
src/decal-new/: decal.ts  ecp5.decalid.ts
src/gfx/: ecp5.gfx.ts  styles.ts  tilewire.ecp5.gfx.ts  types.ts
src/render/: group.decal.ts  types.ts
viewer-test/: index.html  package.json  rollup.config.mjs
viewer-test/src/: index.ts
