[package]
name = "nextpnr-renderer"
version = "0.0.1"
authors = []
edition = "2018"

[lib]
# path = "lib/wasm/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
byteorder = "1.5.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
anyhow = { version = "1.0.93", features = ["backtrace"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
