[package]
name = "nextpnr-renderer"
version = "0.0.1"
authors = []
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# [[bin]]
# name = "nextpnr_renderer"
# path = "src/bin.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
byteorder = "1.5.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
anyhow = { version = "1.0.93", features = ["backtrace"] }

[dependencies.web-sys]
version = "0.3.72"
features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
    "WebGlUniformLocation",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
opt-level = 2
