[package]
name = "nextpnr-renderer"
version = "0.0.1"
authors = []
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
byteorder = "1.5.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
anyhow = { version = "1.0.93", features = ["backtrace"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
itertools = "0.14.0"
minimize_derive = { path = "../macros/minimize_derive" }
bincode = { version = "2.0.1", features = ["serde"] }
miniz_oxide = "0.8.9"
rstar = "0.12.2"
numeric-sort = "0.1.5"

[dependencies.web-sys]
version = "0.3.72"
features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
    "WebGlUniformLocation",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = 2
